positon section added

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </nav>
 
       <!-- banner section -->
-      <section class="mt-12 px-5 md:px-0">
+      <section class="mt-12 px-5 md:px-0 relative">
         <div class="carousel w-full h-[300px] md:h-[600px]">
           <div id="slide1" class="carousel-item relative w-full bg-black">
             <img src="./images/banner4.png" class="w-full opacity-40" />
@@ -201,9 +201,56 @@
 
     <main class="container mx-auto px-5 md:px-0">
 
+      <!-- position relative section starts here-->
+
+            <section class="w-[1100px] h-[240px] mx-auto hidden lg:block my-12 absolute top-[615px] left-40">
+
+              <div class="flex justify-around drop-shadow-xl bg-[#FFF] z-10 rounded-lg py-8">
+                <!-- cards 1 -->
+                <div class="flex justify-center text-center">
+                  <div>
+                    <img class="text-center" src="./images/fruit1.png" alt="">
+                    <p class="text-[#121212CC]">Strawberry</p>
+                  </div>
+                </div>
+                <!-- card 2 -->
+                <div class="flex justify-center text-center">
+                  <div>
+                    <img class="text-center" src="./images/fruit2.png" alt="">
+                    <p class="text-[#121212CC]">Orange</p>
+                  </div>
+                </div>
+                <!-- card 3 -->
+                <div class="flex justify-center text-center">
+                  <div>
+                    <img class="text-center" src="./images/fruit3.png" alt="">
+                    <p class="text-[#121212CC]">Mango</p>
+                  </div>
+                </div>
+                <!-- card 4 -->
+                <div class="flex justify-center text-center">
+                  <div>
+                    <img class="text-center" src="./images/fruit4.png" alt="">
+                    <p class="text-[#121212CC]">Strawberry</p>
+                  </div>
+                </div>
+                <!-- card 4 -->
+                <div class="flex justify-center text-center">
+                  <div>
+                    <img class="text-center" src="./images/fruit5.png" alt="">
+                    <p class="text-[#121212CC]">Mango</p>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+      <!-- position relative section ends here-->
+
+
+
       <!-- Deal of the day section starts here -->
 
-      <section class="my-20">
+      <section class="my-20 mt-52">
         <!--deal title  -->
         <div class="md:flex px-5 md:px-0 justify-between space-y-5">
           <div>
