--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
 
         </div>
         <!--center image -->
-        <div class="">
+        <div class="order-first md:order-none ">
         <img class="" src="./images/whychoose1.png" alt="">
         </div>
         <!-- right side content -->
