--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
       <!-- position relative section starts here-->
 
-            <section class="w-[1100px] h-[240px] mx-auto hidden lg:block my-12 absolute top-[615px] left-40">
+            <section class="w-[1100px] h-[240px] mx-auto hidden lg:block my-12 absolute top-[615px] md:hidden xl:left-40 2xl:left-96">
 
               <div class="flex justify-around drop-shadow-xl bg-[#FFF] z-10 rounded-lg py-8">
                 <!-- cards 1 -->
